load("@rules_proto//proto:defs.bzl", "proto_library")
load("//proto/prost:defs.bzl", "rust_prost_library")
load("//rust:defs.bzl", "rust_test")

package(default_visibility = ["//proto/prost/private/tests:__subpackages__"])

proto_library(
    name = "camel_case_proto",
    srcs = [
        "camel_case.proto",
    ],
    strip_import_prefix = "/proto/prost/private/tests/camel_case",
)

proto_library(
    name = "another_proto",
    srcs = [
        "another.proto",
    ],
    deps = [
        ":camel_case_proto",
    ],
)

rust_prost_library(
    name = "another_proto_rust",
    proto = ":another_proto",
)

rust_test(
    name = "camel_case_test",
    srcs = ["camel_case_test.rs"],
    edition = "2021",
    deps = [
        ":another_proto_rust",
    ],
)
